--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
        <div class="dsafsdf"></div>
     </div>
     <img src=" alt="xcxc">
+    <div class="asd"></div>
  <script src="main.js"></script>
 </body>
 </html>
